unpackaged/main/default/objects/Case/fields/CRM_Category__c.field-meta.xml
<CustomField>
    <fullName>CRM_Category__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Workstream__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Advance Notification</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Damage Billing</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>General/Other</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Information/Update</fullName>
            </value>
            <value>
                <fullName>Job Request</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Live/Dead Checks</fullName>
            </value>
            <value>
                <fullName>Loss of Business</fullName>
            </value>
            <value>
                <fullName>Mains Diversion</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Meter Box Repairs</fullName>
            </value>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Minimum Information</fullName>
            </value>
            <value>
                <fullName>MPRN Enquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physical Work</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Plant Protection</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Signing, Lighting, Guarding &amp; Traffic Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>