unpackaged/main/default/objects/Case/fields/CRM_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Customer_Type__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CITIZENS ADVICE</fullName>
            </value>
            <value>
                <fullName>CONSUMER FOCUS</fullName>
            </value>
            <value>
                <fullName>COUNCILLOR</fullName>
            </value>
            <value>
                <fullName>GAS CONSUMER</fullName>
            </value>
            <value>
                <fullName>GAS NETWORK</fullName>
            </value>
            <value>
                <fullName>GAS SUPPLIER</fullName>
            </value>
            <value>
                <fullName>HS&amp;E</fullName>
            </value>
            <value>
                <fullName>LOCAL AUTHORITY</fullName>
            </value>
            <value>
                <fullName>MEDIA</fullName>
            </value>
            <value>
                <fullName>MEMBER OF PUBLIC</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>OMBUDSMAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>