unpackaged/main/default/objects/Case/fields/CRM_Network__c.field-meta.xml
<CustomField>
    <fullName>CRM_Network__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Out-of-Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>