unpackaged/main/default/objects/Case/fields/CRM_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CRM_Outcome__c</fullName>
    <description>Field to store the Ombudsman Case outcome</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For</fullName>
            </value>
            <value>
                <fullName>Against</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>