unpackaged/main/default/objects/Case/fields/CRM_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Property_Type__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Non-Domestic Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>