unpackaged/main/default/objects/Case/fields/CRM_Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>CRM_Reason_for_Cancellation__c</fullName>
    <description>When a Case Status changes to Cancelled, this field should show in the screen as mandatory</description>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raised in error</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>