unpackaged/main/default/objects/Case/fields/CRM_Region__c.field-meta.xml
<CustomField>
    <fullName>CRM_Region__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM-SO-ALD</fullName>
                <label>Aldershot</label>
            </value>
            <value>
                <fullName>CRM-SE-ASH</fullName>
                <label>Ashford</label>
            </value>
            <value>
                <fullName>CRM-BURGHILL</fullName>
                <label>BURGESS HILL</label>
            </value>
            <value>
                <fullName>CRM-CON-AXIS</fullName>
                <label>CONNECTIONS - AXIS HOUSE</label>
            </value>
            <value>
                <fullName>CRM-CON-HORL</fullName>
                <label>CONNECTIONS - HORLEY</label>
            </value>
            <value>
                <fullName>CRM-SC-CENT</fullName>
                <label>CRM Central - Scotland</label>
            </value>
            <value>
                <fullName>CRM-SC-EAST</fullName>
                <label>CRM East - Scotland</label>
            </value>
            <value>
                <fullName>CRM-SO-LO-CO</fullName>
                <label>CRM London Construction - Southern</label>
            </value>
            <value>
                <fullName>CRM-SO-N-CO</fullName>
                <label>CRM North Construction - Southern</label>
            </value>
            <value>
                <fullName>CRM-SC-NORTH</fullName>
                <label>CRM North - Scotland</label>
            </value>
            <value>
                <fullName>CRM-SO-S-CO</fullName>
                <label>CRM South Construction - Southern</label>
            </value>
            <value>
                <fullName>CRM-SO-SE-CO</fullName>
                <label>CRM South East Construction - Southern</label>
            </value>
            <value>
                <fullName>CRM-TPARCONN</fullName>
                <label>CRM-Third Party Connections</label>
            </value>
            <value>
                <fullName>CRM-SC-WEST</fullName>
                <label>CRM West - Scotland</label>
            </value>
            <value>
                <fullName>CRM-CSPERTH</fullName>
                <label>CUSTOMER SERVICE - PERTH</label>
            </value>
            <value>
                <fullName>CRM-DAMGBILL</fullName>
                <label>DAMAGE BILLING</label>
            </value>
            <value>
                <fullName>CRM-SE-DL-CO</fullName>
                <label>Direct Labour SE Construction – Southern</label>
            </value>
            <value>
                <fullName>CRM-SO-DL-CO</fullName>
                <label>Direct Labour SO Construction - Southern</label>
            </value>
            <value>
                <fullName>CRM-SE-EPS</fullName>
                <label>Epsom</label>
            </value>
            <value>
                <fullName>CRM-SE-GOD</fullName>
                <label>Godstone</label>
            </value>
            <value>
                <fullName>CRM-SE-HOR</fullName>
                <label>Horsham</label>
            </value>
            <value>
                <fullName>CRM-ICI</fullName>
                <label>ICI Team</label>
            </value>
            <value>
                <fullName>CRM-LOSSBUS</fullName>
                <label>LOSS OF BUSINESS CLAIMS</label>
            </value>
            <value>
                <fullName>CRM-MAINT-SC</fullName>
                <label>MAINTENANCE SCOTLAND</label>
            </value>
            <value>
                <fullName>CRM-MAINT-SO</fullName>
                <label>MAINTENANCE SOUTHERN</label>
            </value>
            <value>
                <fullName>CRM-MAJPRJSC</fullName>
                <label>MAJOR PROJECT SCOTLAND</label>
            </value>
            <value>
                <fullName>CRM-MAJSEREP</fullName>
                <label>MAJOR WORKS SOUTHEAST REPLACEMENT</label>
            </value>
            <value>
                <fullName>CRM-MAJSOREP</fullName>
                <label>MAJOR WORKS SOUTH REPLACEMENT</label>
            </value>
            <value>
                <fullName>CRM-NTWKPLAN</fullName>
                <label>NETWORK PLANNING</label>
            </value>
            <value>
                <fullName>CRM-NTWMOB</fullName>
                <label>Network Planning and MOBs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>