unpackaged/main/default/objects/Case/fields/CRM_Site_Visit_Required_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>CRM_Site_Visit_Required_3rd_Party__c</fullName>
    <label>Site Visit Required/3rd Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>