unpackaged/main/default/objects/Case/fields/CRM_Sub_category__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sub_category__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptance Enquiry</fullName>
            </value>
            <value>
                <fullName>Access/Parking Issues</fullName>
            </value>
            <value>
                <fullName>Accuracy Challenge</fullName>
            </value>
            <value>
                <fullName>Appliance/Outlet Pipework Enquiry</fullName>
            </value>
            <value>
                <fullName>Appliance Delivery</fullName>
            </value>
            <value>
                <fullName>Application Enquiry</fullName>
            </value>
            <value>
                <fullName>Arrangements to carry out work</fullName>
            </value>
            <value>
                <fullName>Assisted Connections</fullName>
            </value>
            <value>
                <fullName>Assisted Connections/Fuel Poverty Enquiry</fullName>
            </value>
            <value>
                <fullName>Broken Promise</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Capacity Check</fullName>
            </value>
            <value>
                <fullName>Capacity Increase</fullName>
            </value>
            <value>
                <fullName>Change Date Request</fullName>
            </value>
            <value>
                <fullName>Check for Safety</fullName>
            </value>
            <value>
                <fullName>Completion Letter Enquiry</fullName>
            </value>
            <value>
                <fullName>Consent Enquiry</fullName>
            </value>
            <value>
                <fullName>Customer Enquiry</fullName>
            </value>
            <value>
                <fullName>Customer MPRN Enquiry</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction Survey Feedback</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Date query or change</fullName>
            </value>
            <value>
                <fullName>Deferral Request</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Disconnection</fullName>
            </value>
            <value>
                <fullName>Disputed Charges</fullName>
            </value>
            <value>
                <fullName>Disputes</fullName>
            </value>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>Disruption &amp; Noise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>