unpackaged/main/default/objects/Case/fields/CRM_Workstream__c.field-meta.xml
<CustomField>
    <fullName>CRM_Workstream__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>Emergency/Repair</fullName>
            </value>
            <value>
                <fullName>Mains Replacement</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>