unpackaged/main/default/objects/Case/recordTypes/CRM_Unclassified.recordType-meta.xml
<RecordType>
    <fullName>CRM_Unclassified</fullName>
    <active>true</active>
    <businessProcess>Customer Experience</businessProcess>
    <label>Unclassified</label>
</RecordType>